--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "skipDefaultLibCheck": true,
     "skipLibCheck": false,
     "declaration": true,
+    "types": ["@types/node"],
     "outDir": "./dist"
   },
   "include": ["src/**/*.ts"]
